src/tui/tests/snapshots/rmcl__tui__tests__snapshots__empty_app_renders_the_complete_frame.snap
---
source: src/tui/tests/snapshots.rs
expression: ui.screen()
---
"╭Instances─────────╮╭Content───────────────────────────────────────────────────────────────────────╮"
"│                  ││No instance selected                                                          │"
"│                  │╰──────────────────────────────────────────────────────────────────────────────╯"
"│                  │╭ Installed   Mods • Resource Packs • Shaders • Screenshots • Worlds • Logs ───╮"
"│                  ││No instance selected.                                                         │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  │╰] open dir  [Esc] kill  [a] add─[i] import  [d] delete  [r] rename  [/] search╯"
"│                  │╭Accounts─────────╮╭Settings───────────────────────────╮╭Overview──────────────╮"
"│                  ││No accounts.     ││▸ instance default                 ││Ready                 │"
"│                  ││                 ││                                   ││                      │"
"│                  ││                 ││                                   ││                      │"
"╰──────────────────╯╰─────────────────╯╰───────────────────────────────────╯╰──────────────────────╯"
