src/tui/tests/snapshots/rmcl__tui__tests__snapshots__instance_delete_confirmation_renders_the_complete_frame.snap
---
source: src/tui/tests/snapshots.rs
expression: ui.screen()
---
"╭Instances─────────╮╭Content───────────────────────────────────────────────────────────────────────╮"
"│▌ Snapshot Instanc││Snapshot Instance                                      1.21.1 · Fabric 0.16.14│"
"│▌ Never played    │╰──────────────────────────────────────────────────────────────────────────────╯"
"│                  │╭ Installed   Mods • Resource Packs • Shaders • Screenshots • Worlds • Logs ───╮"
"│                  ││Loading mods...                                                               │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││        ╭ Delete 'Snapshot Instance' ─────────────╮                           │"
"│                  ││        │This will permanently remove the instance│                           │"
"│                  ││        ╰────────────[Esc] cancel  [Enter] confirm╯                           │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  │╰──────────────────────────────────────────────────────────────────────────────╯"
"│                  │╭Accounts─────────╮╭Settings───────────────────────────╮╭Overview──────────────╮"
"│                  ││No accounts.     ││Version  1.21.1 / Fabric           ││Ready                 │"
"│                  ││                 ││Runtime  512M-2G, auto java        ││                      │"
"│                  ││                 ││Profile  instance default / desk no││                      │"
"╰──────────────────╯╰─────────────────╯╰───────────────────────────────────╯╰──────────────────────╯"
